# Wallet-Tracker

./: README.md  package-lock.json  package.json  tailwind.config.ts
prisma/: schema.prisma
prisma/migrations/20250228025323_init/: migration.sql
prisma/migrations/20250317003952_telegram/: migration.sql
src/: middleware.ts
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  error.rs  lib.rs  wallet.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/api/analytics/profits/: route.ts
src/app/api/analytics/tokens/: route.ts
src/app/api/auth/: layout.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/auth/error/: page.tsx
src/app/api/auth/register/: route.ts
src/app/api/auth/signin/: page.tsx
src/app/api/auth/signup/: route.ts
src/app/api/auth/wallet/balance/: route.ts
src/app/api/auth/wallets/: route.ts
src/app/api/auth/wallets/[id]/: route.ts
src/app/api/auth/wallets/balance/: route.ts
src/app/api/auth/wallets/transactions/: page.tsx  route.ts
src/app/api/notifications/alerts/: route.ts
src/app/api/notifications/telegram/: route.ts
src/app/auth/: layout.tsx
src/app/auth/register/: route..ts
src/app/auth/signin/: metadata.ts  page.tsx
src/app/auth/signout/: page.tsx
src/app/auth/signup/: metadata.ts  page.tsx
src/app/dashboard/: page.tsx
src/app/models/: User.ts
src/app/types/: next-auth.d.ts
src/components/: alert-setup.tsx  login-form.tsx  profit-loss-table.tsx  signup-form.tsx  telegram-setup.tsx  top-tokens-table.tsx  wallet-add-modal.tsx
src/components/ui/: meteors.tsx  particles.tsx
src/lib/: db.ts  prisma.ts  solana.ts  telegram.ts
