[package]
name = "sentinel"
version = "0.1.0"
description = "Solana Memecoin Copy Trading System"
authors = ["you"]
edition = "2021"

[lib]
name = "sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana SDK - Neuere Version für bessere Kompatibilität
solana-sdk = "1.17.28"
solana-client = "1.17.28"
spl-token = "4.0.0"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# WebSocket für Helius
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Database - Verwende rusqlite statt sqlx (keine Konflikte!)
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }
tokio-rusqlite = "0.5"

# Security & Encryption
ring = "0.17"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
bip39 = "2.0"

# Blockchain Utilities
borsh = "1.3"
bs58 = "0.5"
bincode = "1.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
